# ipld

./: .gitignore  README.md
dag-cbor/: dag-cbor.cabal  stack.yaml
dag-cbor/src/Codec/DAG/: CBOR.hs
ipld-data-model/: ipld-data-model.cabal  stack.yaml
ipld-data-model/src/Data/: IPLD.hs
