name:                dag-cbor
version:             0.0.0.0
license-file:        LICENSE
author:              Daniel Smith
maintainer:          danielspencersmith@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010  
  build-depends:       base >=4.14.0 && <4.15
                     , bytestring >=0.10.12 && <0.11
                     , cborg >=0.2.4 && <0.3
                     , containers >=0.6.2 && <0.7
                     , ipld-data-model >=0.0.0 && <0.1
                     , monoid-subclasses >=1.1 && <1.2
  exposed-modules:     Codec.DAG.CBOR
