name:                ipld-data-model
version:             0.0.0.0
license-file:        LICENSE
author:              Daniel Smith
maintainer:          danielspencersmith@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010  
  build-depends:       base >=4.14.0 && <4.15
                     , bytestring >=0.10.12 && <0.11
                     , containers >=0.6.2 && <0.7
                     , ipld-cid >=0.1.0 && <0.2
                     , text >=1.2.4 && <1.3
                     , vector >=0.12.1 && <0.13
  exposed-modules:     Data.IPLD
